--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins { id "me.tatarka.retrolambda" version "3.6.0" }
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 26
@@ -44,9 +45,8 @@ dependencies {
     compile 'com.github.medyo:android-about-page:1.2.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.uphyca:stetho_realm:2.0.0'
+
 }
 apply plugin: 'com.jakewharton.butterknife'
-apply plugin: 'realm-android'
-
-
 apply plugin: 'com.google.gms.google-services'
